--- a/index.html
+++ b/index.html
@@ -17,15 +17,24 @@
                 <div class="jos">JOSEPH</div>
             </div>
         </div>
+        <div class="aboutTitle">About..</div>
         <div class="current">
-            <div class="currentTitle">
-                Currently..
-            </div>
             <div class="currentText">
-                Pursuing Btech Mechanical with Manufacturing Engineering
-                <br>
-                <div class="second">[2nd year]</div>
-                <div class="vit">from VIT, Vellore [2022 - 2026]</div> 
+                <span class="cone">
+                  I am currently pursuing my Bachelor of Technology in Mechanical Engineering at Vellore Institute of Technology.
+                </span>
+                <span class="ctwo">
+                  I am passionate about robotics, space, and technology, and 
+                </span>
+                <span class="cthree">
+                  I aspire to contribute to the advancement of human knowledge and exploration.
+                </span>
+                <span class="cthree">
+                  I value teamwork, creativity, and excellence, and
+                </span>
+                <span class="cfour">
+                  I strive to deliver high-quality results in every project I work on.
+                </span>
             </div>
         </div>
         <div class="skillTitle">Skills..</div>
