--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
 
     <button class="accordion">Certificates</button>
     <div class="accordion-content">
+        <div class="certificate">
+        <img src="./cswa.jpg" alt="">
+      </div>
       <div class="certificate">
         <img src="./problem_solving_cert.png" alt="">
       </div>
