--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <button class="accordion">Certificates</button>
     <div class="accordion-content">
         <div class="certificate">
-        <img src="./cswa.jpg" alt="">
+        <img src="./cswa.png" alt="">
       </div>
       <div class="certificate">
         <img src="./problem_solving_cert.png" alt="">
