--- a/index.html
+++ b/index.html
@@ -1,104 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1.0, user-scalable=0" >
+    <meta name="viewport"
+      content="width=device-width, initial-scale=1.0 maximum-scale=1.0, user-scalable=0">
     <title>Naveen George Joseph</title>
     <link rel="stylesheet" href="./stylem.css">
     <link rel="stylesheet" href="./stylepc.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+      crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="icon" href="./nav.jpg">
-</head>
-<body>
+  </head>
+  <body>
     <div class="main">
-        <div class="topbar">
-            <div><img class="navIMG" src="./nav.jpg" alt=""></div>
-            <div class="nameBox">
-                <div class="nav">NAVEEN</div>
-                <div class="geo">GEORGE</div>
-                <div class="jos">JOSEPH</div>
+      <div class="topbar">
+        <div><img class="navIMG" src="./nav.jpg" alt></div>
+        <div class="nameBox">
+          <div class="nav">NAVEEN</div>
+          <div class="geo">GEORGE</div>
+          <div class="jos">JOSEPH</div>
+        </div>
+      </div>
+      <div class="aboutTitle">About..</div>
+      <div class="current">
+        <div class="currentText">
+          <span class="cone">
+            I am currently pursuing my Bachelor of Technology in Mechanical
+            Engineering at Vellore Institute of Technology.
+          </span>
+          <span class="ctwo">
+            I am passionate about robotics, space, and technology, and
+          </span>
+          <span class="cthree">
+            I aspire to contribute to the advancement of human knowledge and
+            exploration.
+          </span>
+          <span class="cthree">
+            I value teamwork, creativity, and excellence, and
+          </span>
+          <span class="cfour">
+            I strive to deliver high-quality results in every project I work on.
+          </span>
+        </div>
+      </div>
+      <div class="skillTitle">Skills..</div>
+      <div class="skills">
+        <div>CAD</div>
+        <div>Solidworks</div>
+        <div>Fusion 360</div>
+        <div>Ultimaker Cura</div>
+        <div>Ansys</div>
+        <div>3D printing</div>
+        <div>Front-end Web Dev</div>
+        <div>Javascript</div>
+        <div>Python</div>
+      </div>
+      <div class="container">
+
+        <button class="accordion">Certificates</button>
+        <div class="accordion-content">
+          <div class="certificate">
+            <img src="./cswa.png" alt>
+          </div>
+          <div class="certificate">
+            <img src="./problem_solving_cert.png" alt>
+          </div>
+          <div class="certificate">
+            <img src="./python_basic_cert.png" alt>
+          </div>
+          <div class="certificate">
+            <img src="./additive_mfg_cert.JPG" alt>
+          </div>
+        </div>
+
+        <button class="accordion">Experience</button>
+        <div class="accordion-content">
+          <div class="roverx">
+            <img src="./roverx.png" alt>
+            <div class="roverxtitle">Team RoverX</div>
+            <div class="exp">
+              Mechanical Department
+              <br>
+              April 2023 - present
+              <br>
+              <a class="rovlink"
+                href="https://www.teamroverx.com/">teamroverx.com</a>
+              <br>
+              <a class="rovlink"
+                href="https://www.linkedin.com/company/teamroverx/">linkedin
+                page</a>
             </div>
+          </div>
         </div>
-        <div class="aboutTitle">About..</div>
-        <div class="current">
-            <div class="currentText">
-                <span class="cone">
-                  I am currently pursuing my Bachelor of Technology in Mechanical Engineering at Vellore Institute of Technology.
-                </span>
-                <span class="ctwo">
-                  I am passionate about robotics, space, and technology, and 
-                </span>
-                <span class="cthree">
-                  I aspire to contribute to the advancement of human knowledge and exploration.
-                </span>
-                <span class="cthree">
-                  I value teamwork, creativity, and excellence, and
-                </span>
-                <span class="cfour">
-                  I strive to deliver high-quality results in every project I work on.
-                </span>
-            </div>
-        </div>
-        <div class="skillTitle">Skills..</div>
-        <div class="skills">
-            <div>CAD</div>
-            <div>Solidworks</div>
-            <div>Fusion 360</div>
-            <div>Ultimaker Cura</div>
-            <div>Ansys</div>
-            <div>3D printing</div>
-            <div>Front-end Web Dev</div>
-            <div>Javascript</div>
-            <div>Python</div>
-        </div>
-        <div class="container">
 
-    <button class="accordion">Certificates</button>
-    <div class="accordion-content">
-        <div class="certificate">
-        <img src="./cswa.png" alt="">
-      </div>
-      <div class="certificate">
-        <img src="./problem_solving_cert.png" alt="">
-      </div>
-      <div class="certificate">
-        <img src="./python_basic_cert.png" alt="">
-      </div>
-      <div class="certificate">
-        <img src="./additive_mfg_cert.JPG" alt="">
-      </div>
-    </div>
-
-
-    <button class="accordion">Experience</button>
-    <div class="accordion-content">
-      <div class="roverx">
-        <img src="./roverx.png" alt="">
-        <div class="roverxtitle">Team RoverX</div>
-        <div class="exp">
-          Mechanical Department
-          <br>
-          April 2023 - present
-          <br>
-          <a class="rovlink" href="https://www.teamroverx.com/">teamroverx.com</a>
-          <br>
-          <a class="rovlink" href="https://www.linkedin.com/company/teamroverx/">linkedin page</a>
+        <button class="accordion">Education</button>
+        <div class="accordion-content">
+          <ul>
+            <li>New Millennium School ~ ICSE 10th [2020]</li>
+            <hr>
+            <li>Sri Chaitanya ~ CBSE 12th [2022]</li>
+            <hr>
+            <li>Vellore Institute of Technology ~ BTech [2026]</li>
+          </ul>
         </div>
       </div>
-    </div>
-
-
-    <button class="accordion">Education</button>
-    <div class="accordion-content">
-      <ul>
-        <li>New Millennium School ~ ICSE 10th [2020]</li>
-        <hr>
-        <li>Sri Chaitanya ~ CBSE 12th [2022]</li>
-        <hr>
-        <li>Vellore Institute of Technology ~ BTech [2026]</li>
-      </ul>
-    </div>
-  </div>
     </div>
 
     <div class="contactTitle">Contact..</div>
@@ -110,7 +117,7 @@
       </div>
       <div class="linkedin">
         <a href="https://www.linkedin.com/in/naveen-george-joseph-802a2423a/">
-          <i class="fa-brands fa-linkedin"></i> 
+          <i class="fa-brands fa-linkedin"></i>
           LinkedIn profile</a>
       </div>
       <div class="github">
@@ -120,8 +127,7 @@
         </a>
       </div>
     </div>
-    
 
     <script src="./script.js"></script>
-</body>
+  </body>
 </html>
